--- a/KeyboardHookManager/KeyboardHookManager/KeyboardHookManager.Core.csproj
+++ b/KeyboardHookManager/KeyboardHookManager/KeyboardHookManager.Core.csproj
@@ -12,8 +12,14 @@
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <AssemblyVersion>1.1.0.0</AssemblyVersion>
     <FileVersion>1.1.0.0</FileVersion>
+    <PackageLicenseFile>LICENSE</PackageLicenseFile>
+    <PackageRequireLicenseAcceptance>True</PackageRequireLicenseAcceptance>
   </PropertyGroup>
   <ItemGroup>
+    <None Include="..\..\LICENSE">
+      <Pack>True</Pack>
+      <PackagePath>\</PackagePath>
+    </None>
     <None Include="..\..\README.md">
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
